[package]
name = "cw-nameservice"
description = "Flix name service"
version = "0.4.1"
authors = ["Siddhu Yeturi <siddhuyeturi@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/5iddy/flix_ns"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
cw-storage-plus = "0.14.0"
cw721-base = { features = ["library"], path = "./packages/cw721-base" }
cw721 = { version = "0.13.4" }
cw-utils = "0.14.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
